--- a/themes/jamstackthemes/layouts/index.html
+++ b/themes/jamstackthemes/layouts/index.html
@@ -8,7 +8,7 @@
 {{ $themes := (where $themes ".Params.stale" "!=" true) }}
 {{ $themeCount := len $themes}}
 <meta name="description" content="The most popular list of themes and starters for JAMstack sites. Over {{ $themeCount }} free static site generator themes for Hugo, Gatsby, Jekyll, Gridsome & more." />
-<link rel="canonical" href="https://jamstackthemes.dev" />
+<link rel="canonical" href="https://mozayc.io" />
 {{ end }}
 
 {{ define "main" }}
@@ -31,7 +31,7 @@
     <div class="blurb blurb-desktop"><p>A list of themes and starters for <a href="https://jamstack.org/" target="_blank" rel="noopener">JAMstack</a> sites. We're the largest gallery of user submitted, open source themes for static site generators 🦖. This site is maintained with <a href="https://github.com/stackbithq/jamstackthemes#contribution-guidelines">community contributions</a> and with the kind support of <a href="https://www.stackbit.com">stackbit.com.</a></p></div>
     <div class="blurb blurb-mobile"><p>A list of themes and starters for <a href="https://jamstack.org/" target="_blank" rel="noopener">JAMstack</a> sites.</p></div>
   </div>
-  
+
   {{ partial "sort-buttons.html" . }}
   <div class="hint">Only themes which have a commit within the last 12 months are shown on the homepage. View <a href="/themes">All Themes</a></div>
 
