initial changes for deployment test with Vercel and few chnages

--- a/themes/jamstackthemes/layouts/partials/footer.html
+++ b/themes/jamstackthemes/layouts/partials/footer.html
@@ -1,11 +1,11 @@
 <div class="footer">
 
   <div class="footer-column footer-column-brand">
-    <h3>JAMstack Themes</h3>
+    <h3>MOZAYC Themes</h3>
     <a href="https://github.com/stackbithq/jamstackthemes#submit-a-theme" rel="nofollow">Submit a theme</a>
     <a href="{{ "/index.json" | relURL }}">Themes JSON</a>
     <a href="{{ "/index.xml" | relURL }}">Themes RSS</a>
-    
+
   </div>
 
   <div class="footer-column">
