--- a/themes/jamstackthemes/layouts/partials/header.html
+++ b/themes/jamstackthemes/layouts/partials/header.html
@@ -3,15 +3,15 @@
 
 <div class="header">
   <div class="header-left">
-    <h1><a href="/" title="JAMstack Themes">JAMstack Themes</a></h1>
+    <h1><a href="/" title="JAMstack Themes">Mozayc Themes</a></h1>
   </div>
 
   {{ partial "main-menu.html" . }}
-  
+
   <div class="submit">
-    <a class="submit-button submit-button-mobile" href="https://github.com/stackbithq/jamstackthemes#submit-a-theme" rel="nofollow">Submit</a>
-    <a class="submit-button submit-button-desktop" href="https://github.com/stackbithq/jamstackthemes#submit-a-theme" rel="nofollow">Submit Theme</a>
-    <a class="github" href="https://github.com/stackbithq/jamstackthemes" rel="nofollow">
+    <a class="submit-button submit-button-mobile" href="https://github.com/DarshanKumar89/mozayc-jamstackthemes#submit-a-theme" rel="nofollow">Submit</a>
+    <a class="submit-button submit-button-desktop" href="https://github.com/DarshanKumar89/mozayc-jamstackthemes#submit-a-theme" rel="nofollow">Submit Theme</a>
+    <a class="github" href="https://github.com/DarshanKumar89/mozayc-jamstackthemes" rel="nofollow">
       <img width="26" height="26" alt="Github Repo" src="{{ "images/icons/github.svg" | relURL }}"/>
     </a>
   </div>
